--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
 
     </LinearLayout>
 
-    <TextView
+    <tw.brad.app.helloworld.myviewtest.MyView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#ff0"
