--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Clear"
+            android:onClick="clear"
             />
         <Button
             android:layout_width="match_parent"
@@ -27,10 +28,17 @@
             android:layout_height="wrap_content"
             android:text="Redo"
             />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Color"
+            android:onClick="color"
+            />
 
     </LinearLayout>
 
     <tw.brad.app.helloworld.myviewtest.MyView
+        android:id="@+id/myView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#ff0"
